# vesc

./: .clang-format  .gclient  .gitattributes  .gitignore  .gitmodules  .gn  .rustfmt.toml  .vpython3  0001-WIP-ES31-Add-compilation-of-Geometry-Shader-on-OpenG.patch  AUTHORS  Android.bp  AndroidManifest-update.xml  AndroidManifest.xml  BUILD.gn  CMakeLists.txt  CONTRIBUTORS  DEPS  DEPS.chromium  GOATS  LICENSE  MANIFEST  METADATA  Makefile  OWNERS  PRESUBMIT.py  README.chromium  README.md  SSBOAliasOverWrite_LinuxDebug_Output.txt  SpirvDebugLog.txt  WATCHLISTS  angle-mods.patch  angle.isolate  angle.json  branch-notes  buildbucket.config  codereview.settings  cr-buildbucket.cfg  diagnose_goma_log.py  dotfile_settings.gni  esoomesoomesoom  (+24 more)
build_overrides/: angle.gni  build.gni  clspv.gni  dawn.gni  glslang.gni  llvm.gni  partition_alloc.gni  spirv_tools.gni  vulkan_loader.gni  vulkan_tools.gni  vulkan_validation_layers.gni
gni/: angle.gni
samples/: BUILD.gn  samples.gyp
samples/WindowTest/: WindowTest.cpp
samples/benchmark/: Benchmark.cpp
samples/capture_replay/: .gitignore  BUILD.gn  CaptureReplay.cpp  CaptureReplayAutoGen.cpp  gen_cpp_frame_capture_replay.py
samples/compute_image_2d/: ComputeImage2D.cpp
samples/dds_to_header/: main.cpp
samples/gles1/: DrawTex.cpp  DrawTexture.cpp  FlatShading.cpp  HelloTriangle.cpp  Model.cpp  SimpleDrawTexture.cpp  SimpleLighting.cpp  SimplePointRasterization.cpp  SimplePointSprite.cpp  SimpleTexture2D.cpp  SimpleTextureCombine.cpp  SimpleTextureEnvironment.cpp  Triangle.cpp
samples/hello_triangle/: HelloTriangle.cpp  counter.h
samples/hello_triangle_gl/: HelloTriangleGL.cpp
samples/line_raster/: LineRaster.cpp
samples/multi_texture/: MultiTexture.cpp
samples/multi_window/: MultiWindow.cpp
samples/multiple_contexts/: MultipleContexts.cpp
samples/multiview/: Multiview.cpp
samples/naked_egl/: NakedEGL.cpp
samples/particle_system/: ParticleSystem.cpp
samples/sample_util/: SampleApplication.cpp  SampleApplication.h  geometry_utils.h  obj_utils.cpp  obj_utils.h  texture_utils.cpp  texture_utils.h  tga_utils.cpp
samples/shader_translator/: shader_translator.cpp
samples/simple_stereo/: SimpleStereo.cpp
samples/simple_texture_2d/: SimpleTexture2D.cpp
samples/simple_vertex_shader/: SimpleVertexShader.cpp
samples/torus_lighting/: TorusBufferStorage.cpp  TorusLightingES1.cpp  TorusLightingES2.cpp  torus.h
samples/translator/: translator.cpp
samples/tri_fan_microbench/: TriFanMicroBench.cpp
src/: angle.gyp  angle.gypi  angleProgramSerializeDataVersion.gni  angle_commit.h  angle_program_serialize_data_version.gni  commit.h  commit_id.bat  commit_id.gypi  commit_id.py  compiler.gni  compiler.gypi  copy_compiler_dll.bat  libEGL.gypi  libGLESv2.gni  libGLESv2.gypi  m00se  program_serialize_data_version.py
src/a4a_opt_in/: OptIn.cpp  OptIn.h
src/cl/: BUILD.gn  entry_points_cl_autogen.cpp  entry_points_cl_autogen.h
src/common/: BinaryStream.h  BitSetIterator.h  BitSetIterator_unittest.cpp  CircularBuffer.h  CircularBuffer_unittest.cpp  Color.h  Color.inl  CommonPoolAlloc.cpp  CommonPoolAlloc.h  CompiledShaderState.cpp  CompiledShaderState.h  CrashHandler.cpp  CrashHandler.h  FastMutex.cpp  FastMutex.h  FastMutex_unittest.cpp  FastVector.h  FastVector_unittest.cpp  FixedDQueue.h  FixedDQueue_unittest.cpp  FixedQueue.h  FixedQueue_unittest.cpp  FixedVector.h  FixedVector_unittest.cpp  Float16ToFloat32.cpp  Float16ToFloat32.py  IterableBitSet.h  JsonSerializer.h  ListNode.h  ListNode_unittest.cpp  MemoryBuffer.cpp  MemoryBuffer.h  Mutex.cpp  Mutex.h  Mutex_unittest.cpp  NativeWindow.h  Optional.h  PackedCLEnums_autogen.h  PackedEGLEnums_autogen.cpp  PackedEGLEnums_autogen.h  (+112 more)
src/compiler/: generate_parser_tools.py
src/feature_support_util/: a4a_rules.json  angle_feature_support_util.h  feature_support_util.cpp  feature_support_util.h  feature_support_util_unittest.cpp
src/gpu_info_util/: SystemInfo.cpp  SystemInfo.h  SystemInfo_android.cpp  SystemInfo_internal.h  SystemInfo_ios.cpp  SystemInfo_libdrm.cpp  SystemInfo_libpci.cpp  SystemInfo_linux.cpp  SystemInfo_mac.cpp  SystemInfo_mac.mm  SystemInfo_macos.mm  SystemInfo_unittest.cpp  SystemInfo_vulkan.cpp  SystemInfo_win.cpp  SystemInfo_winuwp.cpp  SystemInfo_x11.cpp
src/image_util/: AstcCpuDecompressor.h  AstcCpuDecompressorImpl.cpp  AstcCpuDecompressorNoOp.cpp  AstcDecompressor.cpp  AstcDecompressor.h  AstcDecompressorNoOp.cpp  AstcDecompressor_unittest.cpp  LoadToNative_unittest.cpp  copyimage.cpp  copyimage.h  copyimage.inl  generatemip.h  generatemip.inl  imageformats.cpp  imageformats.h  loadimage.cpp  loadimage.h  loadimage.inc  loadimage.inl  loadimage_astc.cpp  loadimage_etc.cpp  loadimage_paletted.cpp  loadtextureborder.cpp  loadtextureborder.h  storeimage.h  storeimage_paletted.cpp
src/labelLayer/: labelLayer.cpp  labelLayer.h
src/libANGLE/: .Program.cpp.swp  .ProgramResource.h.swp  ANGLEShaderProgramVersion.cpp  AttachableObject.h  AttributeMap.cpp  AttributeMap.h  BinaryStream.h  BinaryStream_unittest.cpp  BlobCache.cpp  BlobCache.h  BlobCache_unittest.cpp  Buffer.cpp  Buffer.h  CLBitField.h  CLBuffer.cpp  CLBuffer.h  CLCommandQueue.cpp  CLCommandQueue.h  CLContext.cpp  CLContext.h  CLDevice.cpp  CLDevice.h  CLEvent.cpp  CLEvent.h  CLImage.cpp  CLImage.h  CLKernel.cpp  CLKernel.h  CLMemory.cpp  CLMemory.h  CLObject.h  CLPipe.cpp  CLPipe.h  CLPlatform.cpp  CLPlatform.h  CLProgram.cpp  CLProgram.h  CLSampler.cpp  CLSampler.h  CLtypes.h  (+371 more)
src/libEGL/: Display.cpp  Display.h  Surface.cpp  Surface.h  dummy.cpp  egl_loader_autogen.cpp  egl_loader_autogen.h  libEGL.cpp  libEGL.def  libEGL.rc  libEGL_autogen.cpp  libEGL_autogen.def  libEGL_autogen.exports  libEGL_autogen.lds  libEGL_vulkan_secondaries_autogen.def  main.cpp  main.h
src/libGL/: egl_stubs.cpp  entry_points_gl_1_0_autogen.cpp  entry_points_gl_1_1_autogen.cpp  entry_points_gl_1_2_autogen.cpp  entry_points_gl_1_3_autogen.cpp  entry_points_gl_1_4_autogen.cpp  entry_points_gl_1_5_autogen.cpp  entry_points_gl_1_autogen.cpp  entry_points_gl_2_0_autogen.cpp  entry_points_gl_2_1_autogen.cpp  (+19 more)
(+4210 files in other folders)
