# Copyright 2019 The ANGLE Project Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//gni/angle.gni")

# Paths to loader dependencies:
vulkan_headers_dir = "//third_party/vulkan-headers/src"

# Extra loader parameters:
vulkan_loader_extra_defines = []
vulkan_gen_subdir = "angle/vulkan"

# Tell the loader if we want to build libvulkan as a shared library.
vulkan_loader_shared = angle_shared_libvulkan
