# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build_overrides/build.gni")
import("//build/config/ui.gni")  # import the use_x11 variable

if (build_with_chromium) {
  angle_root = "//third_party/angle"

  import("//ui/ozone/ozone.gni")
} else {
  angle_root = "//"

  declare_args() {
    ozone_platform_gbm = false
  }
}

linux = is_linux && use_x11 && !is_chromeos

declare_args() {
  angle_enable_d3d9 = is_win
  angle_enable_d3d11 = is_win
  angle_enable_gl =
      is_win || linux || is_mac || is_android || ozone_platform_gbm
  angle_enable_gl_null =
      is_win || linux || is_mac || ozone_platform_gbm || is_android

  # TODO(jmadill): Re-enable after roll.
  angle_enable_vulkan = false  # is_win || linux
  angle_enable_null = true

  angle_enable_essl = true
  angle_enable_glsl = true
  angle_enable_hlsl = is_win
}

if (is_win) {
  import("//build/config/win/visual_studio_version.gni")
}
